--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Steps (PASOS)represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
@@ -32,3 +32,16 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+     
+
+      # Mi primera instrucción
+      - name: Mi primer flujo de trabajo
+        run: |
+          echo Impresión de mi primera linea de mi flujo de trabajo.
+     
+
+
+
+
+
+    
