--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,8 +20,10 @@ jobs:
       Region: "Peru"
       cantidad: 12345
 
-      user: ${{secrets.user}}"
-      password: ${{secrets.password}}"
+      user: ${{secrets.user}}
+      password: ${{secrets.PASSWORD}}
+      password2: ${{secrets.PASSWORD_2}}
+
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -59,6 +61,7 @@ jobs:
         run: |
           echo "El usuario es: ${{env.user}}"
           echo "La contraseña  es: ${{env.password}}"
+          echo "La contraseña  es: ${{env.password2}}"
 
        # Impresion de varibles abierta
       - name: Variables abierta
